Fix avatar not centered in the toolbar

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -953,6 +953,9 @@
                         width: 100%;
                         cursor: default;
                         font-size: 32px;
+                        display: inline-flex;
+                        justify-content: center;
+                        align-items: center;
                     }
                     &.cp-avatar {
                         .avatar_main(48px);
